<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.sinarmas_agribusiness.fzmasters.Menu_act"
		style="@style/DefaultActivity">

	<RelativeLayout
			android:id="@+id/rlAll"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="25dp">

		<ImageView
				android:id="@+id/ivTitleLogin"
				android:background="@drawable/ffbtoplogo"
				android:scaleType="fitCenter"
				android:layout_height="85dp"
				android:layout_width="match_parent"
				android:layout_alignParentTop="true"
				android:layout_marginLeft="30dp"
				android:layout_marginRight="30dp"
				android:layout_centerHorizontal="true"/>

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/ivTitleLogin"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="20dp"
			android:layout_alignParentStart="true">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_below="@+id/rlAll">

				<LinearLayout
					android:id="@+id/llGroup1"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true">

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlMill"
						android:gravity="center">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/mill"
							android:id="@+id/ivMill"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvMill"
							android:text="@string/TitleDataMill"
							android:gravity="center"
							android:layout_below="@id/ivMill"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlEstate"
						android:gravity="center"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/estate"
							android:id="@+id/ivEstate"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvEstate"
							android:text="@string/TitleDataEstate"
							android:gravity="center"
							android:layout_below="@id/ivEstate"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlDivisi"
						android:gravity="center">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/divisi"
							android:id="@+id/ivDivisi"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvDivisi"
							android:text="@string/TitleDataDivisi"
							android:gravity="center"
							android:layout_below="@id/ivDivisi"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/llGroup2"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true">

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlPool"
						android:gravity="center">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/transport"
							android:id="@+id/ivPool"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvPool"
							android:text="@string/TitleDataTransport"
							android:gravity="center"
							android:layout_below="@id/ivPool"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlVehicle"
						android:gravity="center"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/kendaraan"
							android:id="@+id/ivVehicle"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvVehicle"
							android:text="@string/TitleDataVehicle"
							android:gravity="center"
							android:layout_below="@id/ivVehicle"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlBlock"
						android:gravity="center">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/block"
							android:id="@+id/ivBlock"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvBlock"
							android:text="@string/TitleDataBlock"
							android:gravity="center"
							android:layout_below="@id/ivBlock"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/llGroup3"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true">

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlUser"
						android:gravity="center">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/user"
							android:id="@+id/ivUser"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvUser"
							android:text="@string/TitleDataUser"
							android:gravity="center"
							android:layout_below="@id/ivUser"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlSetting"
						android:gravity="center"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/setting"
							android:id="@+id/ivSetting"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvSetting"
							android:text="@string/TitleDataSetting"
							android:gravity="center"
							android:layout_below="@id/ivSetting"
							android:textAlignment="center"
							android:layout_marginTop="8dp"/>
					</RelativeLayout>

					<RelativeLayout
						style="@style/MenuButton"
						android:orientation="vertical"
						android:layout_width="@dimen/HeightButtonTimbangan"
						android:layout_height="@dimen/HeightButtonTimbangan2"
						android:weightSum="1"
						android:id="@+id/rlUserx"
						android:gravity="center">

						<ImageView
							android:scaleType="fitXY"
							android:adjustViewBounds="true"
							app:srcCompat="@drawable/user"
							android:id="@+id/ivUserx"
							android:layout_centerVertical="true"
							android:layout_centerHorizontal="true"
							android:layout_width="56dp"
							android:layout_height="56dp"
							android:visibility="gone"/>

						<TextView
							style="@style/TextButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/tvUserx"
							android:text="@string/TitleDataUser"
							android:gravity="center"
							android:layout_below="@id/ivUserx"
							android:textAlignment="center"
							android:layout_marginTop="8dp"
							android:visibility="gone"/>
					</RelativeLayout>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</RelativeLayout>

</RelativeLayout>
